# NovaMark

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  README_EN.md  compile_commands.json  vcpkg.json
.claude/: index.json
.github/workflows/: deploy-docs.yml
.novamark/: playthrough.json
docs/: NovaMark 引擎架构与渲染指南.md  NovaMark 纯文字冒险示例.md  NovaMark 语法规范.md  NovaMark-1.0-Draft.md  go.mod  hugo.toml
docs/content/en/: _index.md
docs/content/en/docs/: _index.md
docs/content/en/docs/api/: _index.md  c-api.md  registry.md  runtime-state.md
docs/content/en/docs/api/c-api/: _index.md  control.md  lifecycle.md
docs/content/en/docs/getting-started/: installation.md  quickstart.md  supported-features.md
docs/content/en/docs/glossary/: _index.md
docs/content/en/docs/guide/: _index.md  characters-and-emotions.md  choices-and-checks.md  endings-and-flags.md  media-and-presentation.md  scene-flow.md  state-and-variables.md  what-is-novamark.md  your-first-story.md
docs/content/en/docs/legacy/: _index.md
docs/content/en/docs/platform/: _index.md  runtime-and-host.md  wasm-api.md  web-template.md
docs/content/en/docs/platform/native/: _index.md  android.md  desktop.md  ios.md
docs/content/en/docs/reference/: _index.md  index.md
docs/content/en/docs/syntax/: _index.md  branches.md  front-matter.md  project-config.md
docs/content/en/docs/syntax/basic/: index.md
docs/content/en/docs/syntax/commands/: index.md
docs/content/en/docs/syntax/scenes/: index.md
docs/content/en/docs/syntax/variables/: index.md
docs/content/zh/: _index.md
docs/content/zh/docs/: _index.md
docs/content/zh/docs/api/: _index.md  c-api.md  registry.md  runtime-state.md
docs/content/zh/docs/getting-started/: installation.md  quickstart.md  supported-features.md
docs/content/zh/docs/glossary/: _index.md
docs/content/zh/docs/guide/: _index.md  characters-and-emotions.md  choices-and-checks.md  endings-and-flags.md  media-and-presentation.md  scene-flow.md  state-and-variables.md  what-is-novamark.md  your-first-story.md
docs/content/zh/docs/legacy/: _index.md
docs/content/zh/docs/platform/: _index.md  runtime-and-host.md  wasm-api.md  web-template.md
docs/content/zh/docs/reference/: _index.md  cheatsheet.md
docs/content/zh/docs/syntax/: _index.md  branches.md  front-matter.md  project-config.md
docs/plans/: presentation-snapshot-api-plan.md
examples/: 00_meta.nvm  10_prologue.nvm  20_library.nvm  30_memory.nvm  40_lighthouse.nvm  c_api_example.md  complete_game.nvm  complete_game.nvmp  demo.nvm  demo.nvmp  demo_assets_attribution.md  project.yaml  registry_demo.cpp
include/nova/ast/: ast_node.h  ast_snapshot.h  ast_source_emitter.h
include/nova/cli/: cli.h
include/nova/core/: error.h  game_metadata.h  result.h  source_location.h  string_utils.h
include/nova/lexer/: lexer.h  token.h
include/nova/packer/: asset_bundler.h  ast_serializer.h  nvmp_format.h  nvmp_writer.h  packer.h
include/nova/parser/: parser.h
include/nova/renderer/: nova_c_api.h  nova_state.h  nova_wasm_api.h  renderer.h
include/nova/semantic/: diagnostic.h  semantic_analyzer.h  symbol_table.h
include/nova/vm/: game_state.h  inventory.h  registry.h  save_data.h  serializer.h  state.h  variable.h  vm.h
src/: CMakeLists.txt
src/ast/: CLAUDE.md  CMakeLists.txt  ast_node.cpp  ast_snapshot.cpp  ast_source_emitter.cpp
src/cli/: CLAUDE.md  CMakeLists.txt  cli.cpp  main.cpp
src/core/: CMakeLists.txt  game_metadata.cpp  source_location.cpp  string_utils.cpp
src/lexer/: CLAUDE.md  CMakeLists.txt  lexer.cpp  token.cpp
src/packer/: CLAUDE.md  CMakeLists.txt  asset_bundler.cpp  ast_serializer.cpp  nvmp_format.cpp  nvmp_writer.cpp  packer.cpp
src/parser/: CLAUDE.md  CMakeLists.txt  parser.cpp
src/renderer/: CLAUDE.md  CMakeLists.txt  nova_c_api.cpp
src/renderer/wasm/: nova_wasm_exports.cpp
src/semantic/: CLAUDE.md  CMakeLists.txt  diagnostic.cpp  semantic_analyzer.cpp  symbol_table.cpp
src/vm/: CLAUDE.md  CMakeLists.txt  inventory.cpp  registry.cpp  save_data.cpp  serializer.cpp  variable.cpp  vm.cpp
template/web/: CLAUDE.md  CMakeLists.txt  app.js  index.html  nova_renderer.js  style.css
template/web/src/: nova_wasm_main.cpp
tests/: CMakeLists.txt  ast_source_emitter_test.cpp  c_api_test.cpp  lexer_test.cpp  nova_state_v2_test.cpp  parser_test.cpp  registry_test.cpp  semantic_test.cpp  state_version_test.cpp  vm_test.cpp
tools/renpy2nova/: CLAUDE.md  CMakeLists.txt
tools/renpy2nova/include/renpy2nova/analyzer/: renpy_analyzer.h
tools/renpy2nova/include/renpy2nova/app/: application.h
tools/renpy2nova/include/renpy2nova/converter/: converter.h  project_converter.h
tools/renpy2nova/include/renpy2nova/core/: filesystem_compat.h
tools/renpy2nova/include/renpy2nova/emitter/: novamark_emitter.h
tools/renpy2nova/include/renpy2nova/lexer/: renpy_lexer.h
tools/renpy2nova/include/renpy2nova/report/: conversion_report.h
tools/renpy2nova/include/renpy2nova/resource/: resource_manifest.h
tools/renpy2nova/src/: main.cpp
tools/renpy2nova/src/analyzer/: renpy_analyzer.cpp
tools/renpy2nova/src/app/: application.cpp
tools/renpy2nova/src/converter/: converter.cpp  project_converter.cpp
tools/renpy2nova/src/emitter/: novamark_emitter.cpp
tools/renpy2nova/src/lexer/: renpy_lexer.cpp
tools/renpy2nova/src/report/: conversion_report.cpp
tools/renpy2nova/src/resource/: resource_manifest.cpp
tools/renpy2nova/tests/: renpy2nova_test.cpp
tools/renpy2nova/tests/fixtures/: advanced_practical_coverage.rpy  menu_branch_call_jump.rpy  menu_branch_call_tail_unsafe.rpy  menu_branch_nonwhitelisted_prelude_unsafe.rpy  menu_branch_prelude_call.rpy  menu_branch_terminal_call_safe.rpy  simple_dialogue_scene.rpy  unsupported_degradation.rpy
tools/renpy2nova/tests/golden/: advanced_practical_coverage.nvm  menu_branch_call_jump.nvm  menu_branch_call_tail_unsafe.nvm  menu_branch_nonwhitelisted_prelude_unsafe.nvm  menu_branch_prelude_call.nvm  menu_branch_terminal_call_safe.nvm  simple_dialogue_scene.nvm  unsupported_degradation.nvm
(+8 files in other folders)
